Tweak to prevent box overflow.

--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -78,8 +78,8 @@
 	margin: 0;
 	padding: 0;
 	width: 99%;
-	max-height: 230px;
-	overflow: hidden;
+	height: 75px;
+	overflow: auto;
 	list-style: none;
 	background-color: #FFF;
 	border-top: 1px solid #ccc;
